[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-grabber"
version = "1.0.0"
description = "Python package and CLI for Alpha Vantage financial market data API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Alpha Vantage CLI Team", email = "support@example.com"}
]
maintainers = [
    {name = "Alpha Vantage CLI Team", email = "support@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
    "pandas>=1.5.0",
    "configparser>=5.0.0",
    "pytest>=8.3.5",
    "setuptools>=75.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
alpha-grabber = "alpha_grabber.cli:cli"
ag = "alpha_grabber.cli:cli"

[project.urls]
Homepage = "https://github.com/example/alphavantage-cli"
Documentation = "https://alphavantage-cli.readthedocs.io/"
Repository = "https://github.com/example/alphavantage-cli"
Issues = "https://github.com/example/alphavantage-cli/issues"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
